# G2PT

./: .gitignore  .readthedocs.yaml  Collapse_Gene_Ontology_Based_on_GWAS_results.ipynb  Draw_ontology_with_highlighted_systems.ipynb  Epistasis_discovery_pipeline.ipynb  Epistasis_pipeline.ipynb  Epistasis_simulation.ipynb  LICENSE  Prune_Gene_Ontology_Based_on_GWAS_results.ipynb  README.md  cluster_embeddings.py  discover_epistasis.py  environment.yaml  environment.yml  evaluate_epistasis_detection.py  evaluate_epistasis_retrieval.py  get_pseudo_r2.py  go_file.ipynb  patient_transfer.py  predict_all_combination.snp2p.py  predict_attention.py  predict_attention_with_selected_phenotypes.py  predict_model.sh  run_epistasis_pipeline.sh  setup.cfg  setup.py  train_drug_response_meta.py  train_drug_response_model.py  train_g2p_model.py  train_greedy_phenotype_selection_model.py  train_model.py  train_model.sh  train_snp2p_embedding_model.py  train_snp2p_model.py  train_snp2p_model_from_pretrained.py
GO_files/: GO_PC_full.txt  goID_2_name.tab
Go_files/: GO_BP_MF_CC_full.txt
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
samples/: README.md  generate_synthetic_data.py  ontology.txt  output_model.PHENOTYPE.head_0.gene_importance.csv  output_model.PHENOTYPE.head_0.sys_importance.csv  output_model.PHENOTYPE.head_sum.csv  output_model.prediction.csv  output_model.pt.0  output_model.pt.10  output_model.pt.15  output_model.pt.20  output_model.pt.5  run_plink_score.sh  snp2gene.txt  synthetic_test.bed  synthetic_test.cov  synthetic_test.fam  synthetic_test.pheno  (+14 more)
(+112 files in other folders)
