[metadata]
name = g2pt
version = 0.1.0
description = Genotype-to-Phenotype Transformer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    myst-parser
